Version 0.12.0 (legolas558)
* will remember import options
* better import options and overwrite settings
* macros shall return a true/false value to tell about failure
* commas are again best-preference for tags specification
* deprecated "Tags" usage for tagging
* now using 'woas_nowiki' and 'woas_nowiki_multiline' to render nowiki syntax, coupled with <pre/> tag
* fixed help pages browsing for Opera
* only check for page title validity when renaming
* addedd 'woas_' prefix to CSS classes for links
* fixed some wrong dead pages listings
* fixed section reference in wiki links
* fixed page deletion bug (2994251, reported by rad30n)
* fixed page rename bug (2997948, reported by thinker5555)
* removed 'double-click to clear' feature of debug console
* fixed file load issue on Chrome/Safari
* fixed many WSIF load inconsistencies
* macro arguments support
* introduced DOM manager
* optimized DOM head save code
* development of jsMath, shjs, flot plugins
* plugins implementation
* removed bootscript (will be automatically converted to a plugin)
* fixed locking issue on IE (2991747, reported by deroock)
* fixed unparsed option during WSIF export (M.Ellison)
* fixed some issues with WSIF external loading
* new tables syntax (FBNil)
* reorganized Special::Advanced
* removed import code for WoaS < 0.9.6B
* refresh CSS after XHTML import

Version 0.11.9 (legolas558) released 2010-04-22
* fixed tail removal
* fix data corruption issue and title missing on IE
* debug check for DOM data not correctly retrieved
* use CRLF in nowiki preformatted blocks under IE
* do not display "BUG" log lines for locking
* fixed CSS not imported issue (reported by littlegirl, found by M.Ellison,akazia)
* fixed corruption on save issue

Version 0.11.8 (legolas558) released 2010-04-21
* fixed loading overlay not hidden when changing debug mode
* fixed deleted WoaS namespace from reserved list

Version 0.11.7 (legolas558) released 2010-04-20
* added foldable listing options